[package]
name = "dropbear"
version = "0.1.0"
authors = ["Zoey <Dessix@Dessix.net>"]
description = "Awaitable drop container based on Tokio oneshots"
license = "MIT OR Apache-2.0"
edition = "2018"
categories = ["asynchronous"]
keywords = ["future", "async", "await", "tokio"]
repository = "https://github.com/Dessix/dropbear-rs"
readme = "README.md"
include = [
    "Cargo.toml",
    "LICENSE*",
    "README.md",
    "src/*.rs",
]

[dependencies]
futures = "~0.3.12"
tokio = { version = ">= 0.2.24", features = ["sync"] }

[dev-dependencies]
tokio = { version = ">= 0.2.24", features = ["sync", "macros", "rt"] }
